syntax = "proto3";

package aperture.policy.sync.v1;

message CommonAttributes {
  // Name of the Policy.
  string policy_name = 1;
  // Hash of the entire Policy spec.
  string policy_hash = 2;
  // The id of Component within the circuit.
  string component_id = 3;
}
